--- a/htdocs/css/style.css
+++ b/htdocs/css/style.css
@@ -61,6 +61,10 @@ input[type=select] {
     transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
 }
 
+input[type=checkbox] {
+    display: inline;
+}
+
 /**
 * CSS sprite for a dice with six faces.
 */
@@ -93,8 +97,15 @@ input[type=select] {
 .dice-utf8 {
     font-size: 32px;
     font-style: !important normal;
+    display: flex;
+    /* justify-content: center;
+    align-items: center; */
+    display: !important inline;
 }
 
+.dice-container {
+    display: flex;
+}
 .game {
     min-height: 500px;
 }
